examples/ratatui/src/snapshots/jobs__tests__a_failed_run.snap
---
source: src/tests.rs
expression: "text(40, 10, &app)"
---
"╭ CI run #42 ──────────────────────────╮"
"│ ✓ build (linux)                      │"
"│ ✓ build (macos)                      │"
"│ ✗ test (unit)                        │"
"│ ● test (integration)                 │"
"│                                      │"
"╰──────────────────────────────────────╯"
"╭ passed ──────────────────────────────╮"
"│█████████████████2/4                  │"
"╰──────────────────────────────────────╯"
