examples/ratatui/src/snapshots/jobs__tests__failed_run.snap
---
source: src/tests.rs
expression: "ansi(40, 10, &app)"
extension: ansi
snapshot_kind: binary
---
